Cambiamos nombre proyecto.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apsl-angular-generator",
+  "name": "generator-apsl-angular",
   "version": "0.0.1",
   "description": "",
   "keywords": [
