--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   ],
   "dependencies": {
     "yeoman-generator": "~0.17.7",
-    "chalk": "~0.5.1"
+    "chalk": "~0.5.1",
+    "camel-case": "1.0.2",
+    "pascal-case": "1.0.0"
   }
 }
