--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chalk": "~0.5.1",
     "mkdirp": "^0.5.1",
     "pascal-case": "1.0.0",
+    "rimraf": "^2.4.2",
     "yeoman-generator": "~0.17.7"
   },
   "devDependencies": {
