--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
-    "name": "generator-apsl-angular",
-    "version": "0.0.1",
-    "description": "AngularJS app generator by APSL",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/APSL/generator-apsl-angular.git"
-    },
-    "keywords": [
-        "yeoman-generator",
-        "APSL"
-    ],
-    "dependencies": {
-        "camel-case": "1.0.2",
-        "chalk": "~0.5.1",
-        "mkdirp": "^0.5.1",
-        "pascal-case": "1.0.0",
-        "rimraf": "^2.4.2",
-        "wiredep": "^2.2.2",
-        "yeoman-generator": "~0.17.7",
-        "yosay": "^1.0.5"
-    },
-    "devDependencies": {
-        "generator-angular": "^0.12.1",
-        "generator-karma": "^1.0.0"
-    },
-    "license": "BSD-2-Clause"
+  "name": "generator-apsl-angular",
+  "version": "0.0.1",
+  "description": "AngularJS app generator by APSL",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/APSL/generator-apsl-angular.git"
+  },
+  "keywords": [
+    "yeoman-generator",
+    "APSL"
+  ],
+  "dependencies": {
+    "autoprefixer-core": "^5.2.1",
+    "bower": "^1.4.1",
+    "camel-case": "1.0.2",
+    "chalk": "~0.5.1",
+    "grunt-cli": "^0.1.13",
+    "mkdirp": "^0.5.1",
+    "pascal-case": "1.0.0",
+    "rimraf": "^2.4.2",
+    "wiredep": "^2.2.2",
+    "yeoman-generator": "~0.17.7",
+    "yosay": "^1.0.5"
+  },
+  "devDependencies": {
+    "generator-angular": "^0.12.1",
+    "generator-karma": "^1.0.0"
+  },
+  "license": "BSD-2-Clause"
 }
